# c-chat

./: .gitignore  Doxyfile  README.md
doc/html/: annotated.html  classes.html  client_8c.html  client_8c__incl.map  client_8c__incl.md5  client_8h.html  client_8h__dep__incl.map  client_8h__dep__incl.md5  client_8h_source.html  clientlist_8c.html  clientlist_8c__incl.map  clientlist_8c__incl.md5  clientlist_8h.html  clientlist_8h__dep__incl.map  clientlist_8h__dep__incl.md5  clientlist_8h__incl.map  clientlist_8h__incl.md5  clientlist_8h_source.html  dir_000001_000003.html  dir_000002_000003.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741_dep.map  dir_075bb3ff235063c77951cd176d15a741_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab_dep.map  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  networkdef_8h.html  networkdef_8h__dep__incl.map  networkdef_8h__dep__incl.md5  (+27 more)
helpfiles/: client_help.txt  server_help.txt
report/: presentazione.odp
src/: CMakeLists.txt  client.c  clientlist.c  clientlist.h  networkdef.h  networkutil.c  networkutil.h  server.c  server.h
src/client/: CMakeLists.txt  client.c  client.h
src/server/: CMakeLists.txt  clientlist.c  clientlist.h  server.c  server.h
src/util/: CMakeLists.txt  networkdef.h  networkutil.c  networkutil.h
(+77 files in other folders)
